jitfailure-ffc_form_e8c399db922ccc4f0c7295fb2e3924fa7fa10b78/error.log
/tmp/tmpuj_a17ag/ffc_form_e8c399db922ccc4f0c7295fb2e3924fa7fa10b78.cpp: In member function 'virtual void ffc_form_e8c399db922ccc4f0c7295fb2e3924fa7fa10b78_cell_integral_main_otherwise::tabulate_tensor(double*, const double* const*, const double*, int) const':
/tmp/tmpuj_a17ag/ffc_form_e8c399db922ccc4f0c7295fb2e3924fa7fa10b78.cpp:297:18: error: redeclaration of 'const double J_c0'
  297 |     const double J_c0 = coordinate_dofs[0] * FE10_C0_D01_Q49[0][0][0] + coordinate_dofs[2] * FE10_C0_D01_Q49[0][0][1];
      |                  ^~~~
/tmp/tmpuj_a17ag/ffc_form_e8c399db922ccc4f0c7295fb2e3924fa7fa10b78.cpp:289:18: note: 'const double J_c0' previously declared here
  289 |     const double J_c0 = coordinate_dofs[0] * FE10_C0_D01_Q49[0][0][0] + coordinate_dofs[2] * FE10_C0_D01_Q49[0][0][1];
      |                  ^~~~
/tmp/tmpuj_a17ag/ffc_form_e8c399db922ccc4f0c7295fb2e3924fa7fa10b78.cpp:298:18: error: redeclaration of 'const double J_c3'
  298 |     const double J_c3 = coordinate_dofs[1] * FE10_C0_D01_Q49[0][0][0] + coordinate_dofs[5] * FE10_C0_D01_Q49[0][0][1];
      |                  ^~~~
/tmp/tmpuj_a17ag/ffc_form_e8c399db922ccc4f0c7295fb2e3924fa7fa10b78.cpp:290:18: note: 'const double J_c3' previously declared here
  290 |     const double J_c3 = coordinate_dofs[1] * FE10_C0_D01_Q49[0][0][0] + coordinate_dofs[5] * FE10_C0_D01_Q49[0][0][1];
      |                  ^~~~
/tmp/tmpuj_a17ag/ffc_form_e8c399db922ccc4f0c7295fb2e3924fa7fa10b78.cpp:299:18: error: redeclaration of 'const double J_c1'
  299 |     const double J_c1 = coordinate_dofs[0] * FE10_C0_D01_Q49[0][0][0] + coordinate_dofs[4] * FE10_C0_D01_Q49[0][0][1];
      |                  ^~~~
/tmp/tmpuj_a17ag/ffc_form_e8c399db922ccc4f0c7295fb2e3924fa7fa10b78.cpp:291:18: note: 'const double J_c1' previously declared here
  291 |     const double J_c1 = coordinate_dofs[0] * FE10_C0_D01_Q49[0][0][0] + coordinate_dofs[4] * FE10_C0_D01_Q49[0][0][1];
      |                  ^~~~
/tmp/tmpuj_a17ag/ffc_form_e8c399db922ccc4f0c7295fb2e3924fa7fa10b78.cpp:300:18: error: redeclaration of 'const double J_c2'
  300 |     const double J_c2 = coordinate_dofs[1] * FE10_C0_D01_Q49[0][0][0] + coordinate_dofs[3] * FE10_C0_D01_Q49[0][0][1];
      |                  ^~~~
/tmp/tmpuj_a17ag/ffc_form_e8c399db922ccc4f0c7295fb2e3924fa7fa10b78.cpp:292:18: note: 'const double J_c2' previously declared here
  292 |     const double J_c2 = coordinate_dofs[1] * FE10_C0_D01_Q49[0][0][0] + coordinate_dofs[3] * FE10_C0_D01_Q49[0][0][1];
      |                  ^~~~
